--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r main/requirements.txt
+        pip install -r requirements.txt
     - name: Install npm dependencies
       run: sudo npm install -g puppeteer-cli --unsafe-perm=true
