--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    - name: Check out repo
+      uses: actions/checkout@v2
+      # We need full history to introspect created/updated:
+      with:
+        fetch-depth: 0
+        path: main
     - name: Set up Python
       uses: actions/setup-python@v1
       with:
@@ -29,6 +35,6 @@ jobs:
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r main/requirements.txt
     - name: Install npm dependencies
       run: sudo npm install -g puppeteer-cli --unsafe-perm=true
