--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,12 @@ jobs:
       with:
         fetch-depth: 0
         path: main
+    - name: Checkout til-db
+      uses: actions/checkout@v2
+      with:
+        repository: stefanzweig/scratch-db
+        path: scratch-db
+        token: ${{ secrets.PERSONAL_ACCESS_TOKEN_FOR_PUSH }}        
     - name: Set up Python
       uses: actions/setup-python@v1
       with:
