--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,7 +36,7 @@ databases:
           SELECT
             'tag:til.zweig.net,2020-04-30:' || path as atom_id,
             title as atom_title,
-            'https://til.zweig.net/' || topic || '/' || slug as atom_link,
+            'https://scratch.zweig.net/' || topic || '/' || slug as atom_link,
             created_utc as atom_updated,
             html as atom_content_html,
             'Stefan Zweig' as atom_author_name,
