--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,9 +34,9 @@ databases:
         title: Stefan Zweig TIL
         sql: |-
           SELECT
-            'tag:scratch.zweig.net,2020-04-30:' || path as atom_id,
+            'tag:scratch-gamma.vercel.app,2020-04-30:' || path as atom_id,
             title as atom_title,
-            'https://scratch.zweig.net/' || topic || '/' || slug as atom_link,
+            'https://scratch-gamma.vercel.app/' || topic || '/' || slug as atom_link,
             created_utc as atom_updated,
             html as atom_content_html,
             'Stefan Zweig' as atom_author_name,
