--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
     - name: Download previous database unless REBUILD in commit message
       if: |-
         !contains(github.event.head_commit.message, 'REBUILD')
-      run: curl --fail -o main/scratch.db https://raw.githubusercontent.com/stefanzweig/scratch-db/main/scratch.db
+      run: curl --fail -o main/scratch.db  https://github.com/stefanzweig/scratch-db/raw/main/scratch.db
       continue-on-error: true
     - name: Build database
       run: |-
