--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,9 +11,9 @@ jobs:
     steps:
     - name: install fonts
       run: |
-        sudo apt install wqy-microhei-fonts.noarch -y      
-        sudo apt install wqy-unibit-fonts.noarch -y      
-        sudo apt install wqy-zenhei-fonts.noarch -y      
+        sudo apt-get -y install fonts-wqy-microhei
+        sudo apt-get -y install fonts-wqy-unibit
+        sudo apt-get -y install fonts-wqy-zenhei     
     - name: Check out repo
       uses: actions/checkout@v2
       # We need full history to introspect created/updated:
