--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,13 @@ jobs:
       # We need full history to introspect created/updated:
       with:
         fetch-depth: 0
-        path: main     
+        path: main   
+    - name: Checkout scratch-db
+      uses: actions/checkout@v2
+      with:
+        repository: stefanzweig/scratch-db
+        path: scratch-db
+        token: ${{ secrets.ACCESS_TOKEN }}  
     - name: Set up Python
       uses: actions/setup-python@v1
       with:
@@ -71,6 +77,13 @@ jobs:
         git config --global user.name "README-bot"
         git diff --quiet || (git add README.md && git commit -m "Updated README")
         git push
+    - name: Save scratch.db to stefanzweig/scratch-db
+      run: |-
+        cd scratch-db
+        cp ../main/scratch.db .
+        git add scratch.db
+        git commit --amend --no-edit
+        git push --force
     - name: Deploy Datasette using Vercel
       env:
         NOW_TOKEN: ${{ secrets.NOW_TOKEN }}
