--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 GitPython
 sqlite-utils>=3.2
 beautifulsoup4
-datasette==0.63
+datasette>=0.63
 datasette-atom>=0.7
 datasette-publish-vercel>=0.14.1
 datasette-template-sql>=1.0.2
