--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,9 +36,9 @@ databases:
           SELECT
             'tag:tils.liuhaijiang.com:' || path as atom_id,
             title as atom_title,
-            'https://tils.liuhaijiang.com/' || topic || '/' || slug as link,
+            'https://tils.liuhaijiang.com/' || topic || '/' || slug as atom_link,
             created_utc as atom_updated,
-            html as content_html,
+            html as atom_content_html,
             'Stefan Zweig' as author_name,
             'https://tils.liuhaijiang.com/' as author_uri
           FROM
