--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,13 +34,13 @@ databases:
         title: Stefan Zweig TIL
         sql: |-
           SELECT
-            'tag:tils.liuhaijiang.com:' || path as atom_id,
+            'tag:til.liuhaijiang.com:' || path as atom_id,
             title as atom_title,
-            'https://tils.liuhaijiang.com/' || topic || '/' || slug as atom_link,
+            'https://til.liuhaijiang.com/' || topic || '/' || slug as atom_link,
             created_utc as atom_updated,
             html as atom_content_html,
             'Stefan Zweig' as author_name,
-            'https://tils.liuhaijiang.com/' as author_uri
+            'https://til.liuhaijiang.com/' as author_uri
           FROM
             til
           order by
