Update main.yml vercel cli

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,8 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: 3.12
+    - name: Install Vercel CLI
+      run: npm install --global vercel@latest
     - uses: actions/cache@v3
       name: Configure pip caching
       with:
