--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v1
       with:
-        python-version: 3.9
+        python-version: '3.12'
     - name: Install Vercel CLI
       run: npm install --global vercel@latest
     - uses: actions/cache@v3
